# DFU-Multimodal

./: .gitattributes  .gitignore  README.md  instructions.txt  pyproject.toml  requirements.txt
data/: README.md  dataset_info.txt
logs/: EVALUATION_SUMMARY.txt
models/: classifier.py  encoders.py  fusion.py  models.py
notebooks/: ablation_study.py  extended_metrics.py  fix_checkpoint_keys.py  grad_cam_visualization.py  test_time_augmentation.py  train_multimodal_fusion.py  train_rgb_only.py  train_rgb_vit_fusion.py  train_thermal_only.py
notebooks/early files/: traiin_testfirst.py  train_RGB_Thermal_Unimodal_fusion.py  train_rgb_resnet_fusion.py  train_singleRGB.py
scripts/: analyze_image_sizes.py  check_gpu.py  dataloader.py  download_datasets.sh  organize_clean_dataset.py  patient_level_split.py  prepare_datasets.py  standardize_images.py  verify_structure.py
scripts/early files/: dataloader.py
