[tool.poetry]
name = "dfu-multimodal"
version = "0.1.0"
description = "Multimodal DFU detection and risk stratification"
authors = ["ShreenathKR2000 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# PyTorch is left unpinned here because platform/CUDA wheels should be
# installed using the official PyTorch index for your CUDA version.
streamlit = "^1.20.0"
wandb = "^0.15.0"
tensorboard = "^2.12.0"
timm = "^0.9.2"
albumentations = "^1.3.0"
opencv-python = "^4.7.0"
scikit-image = "^0.20.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.0"
Pillow = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
